Implement crud operations for the products and articles
